--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="bg-white pinside40 service-block outline mb30">
                             <div class="icon mb40"> 
-                                <img src="https://www.helpmycash.com/image/show/2242/?width=106" alt="" class="icon-svg-2x"> 
+                                <img src="images/credit-card.svg" alt="" class="icon-svg-2x"> 
                             </div>
                             <h2><a class="title">Tarjetas de Creditos</a></h2>
                             <p>No malgastes o prestes mas dinero del que ganas o puedes pagar esto es un error basico al momento de tener este elemento</p>
@@ -136,7 +136,7 @@
                     </div>
                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="bg-white pinside40 service-block outline mb30">
-                            <div class="icon mb40"> <img src="images/mortgage.svg" alt="Borrow - Loan Company Website Template" class="icon-svg-2x"></div>
+                            <div class="icon mb40"> <img src="images/credit-card.svg" alt="Borrow - Loan Company Website Template" class="icon-svg-2x"></div>
                             <h2><a href="#" class="title">Tarjeta de Debito</a></h2>
                             <p>Es un buen elemento para comenzar a llevar una vida financiera estable ya que con esto ahorras y gastas el dinero que ganas y no necesitas pedir prestamo a banco o a terceros</p>
                             <a href="#" class="btn-link">Read More</a> </div>
