--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
                             <div class="icon mb40"> <img src="images/credit-card.svg" alt="Borrow - Loan Company Website Template" class="icon-svg-2x"></div>
                             <h2><a href="#" class="title">Tarjeta de Debito</a></h2>
                             <p>Es un buen elemento para comenzar a llevar una vida financiera estable ya que con esto ahorras y gastas el dinero que ganas y no necesitas pedir prestamo a banco o a terceros</p>
-                            <a href="#" class="btn-link">Read More</a> </div>
+                            <a href="#" class="btn-link">Leer Mas</a> </div>
                     </div>
                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="bg-white pinside40 service-block outline mb30">
                             <div class="icon mb40"> <img src="images/piggy-bank.svg" alt="Borrow - Loan Company Website Template" class="icon-svg-2x"></div>
                             <h2><a href="#" class="title">Mini Credito</a></h2>
                             <p>Puedes ser una buena heramienta si necesitas el dinero enseguida pero ojo ten cuidado recuerda no prestar mas de lo que ganas o puedes pagar</p>
-                            <a href="#" class="btn-link">Read More</a> </div>
+                            <a href="#" class="btn-link">Leer Mas</a> </div>
                     </div>
                 </div>
             </div>
